
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2015.12.11[/b]:
-Added option to merge shadow from another SLP.

Version [b]2015.12.2[/b]:
-Terrain restriction tab updated.

Version [b]2015.11.26[/b]:
-Renamed enable/disable buttons.
-Added a button to enable automatic backups.
-Added new handy buttons to sounds tab.

Version [b]2015.11.24[/b]:
-New/better information here and there.

Version [b]2015.11.18[/b]:
-Terrain restriction names customizable.
-Updates for Age of Empires 1.

Version [b]2015.11.16[/b]:
-Added an option to load one extra first priority DRS file.
-Updated techs tab for team effects.
-All unit filters combined.

Version [b]2015.11.5[/b]:
-Updates for The African Kingdoms.
-Only last language file gets saved if only it was edited.

Version [b]2015.10.16[/b]:
-Bugfix: Language strings are shown again for buildings.

Version [b]2015.9.24[/b]:
-Sorted recent paths.
-House graphics with fire animate properly.
-Villager mode renamed.
-Option to keep main window on top.

Version [b]2015.8.28[/b]:
-Simple animations synced.
-SLP view angle settable by mouse right click.
-Angle rotation rate based on available angles.
-Fixed showing trebuchet/cannon icons.
-Fixed showing tech icons and unit action graphics in SWGB and CC.

Version [b]2015.8.26[/b]:
-SLP view background color changeable.
-Added previous and first frame buttons.
-Fixed runtime error in bitmask boxes of units tab.

Version [b]2015.8.25[/b]:
-Immediately refresh graphics when editing them.
-Can play external terrain sounds.
-Fixed massive lag when selecting units.

Version [b]2015.8.23[/b]:
-Icons show without SLP view.
-Looping optional for WAV sounds.
-SLP showing options refresh the view.
-Optional SLP anchor.
-Shield outline shown properly.